/**
 * Classe qui permet de définir un étudiant
 */

public class Etudiant{

    /**
     * Attribut qui permet de connaitre l'identité de l'étudiant
     */
    private Identite identite;
    /**
     * Attribut qui permet de connaitre la formation de l'étudiant
     */
    private Formation formation;
    /**
     * Attribut qui permet de savoir les notes de l'étudiant
     */
    private Map<String,ArrayList<Float>> notes;

}